<resources>
    <string name="app_name" translatable="false">CBCS</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="your_enrollment_number" translatable="false">Your Enrollment Number</string>
    <string name="your_course" translatable="false">Your Course</string>
    <string name="your_department" translatable="false">Your Department</string>
    <string name="your_name" translatable="false">Your Name</string>
    <string name="amity_logo" translatable="false">Amity logo</string>
    <string name="your_subject_for_cbcs" translatable="false">Your Subject for CBCS</string>
    <string name="enter_email_id" translatable="false">Enter Email-id</string>
    <string name="enter_your_password" translatable="false">Enter Your Password</string>
    <string name="please_contact_your_department_for_your_credentials" translatable="false">Please Contact Your Department For Your Credentials</string>
    <string name="amity_login_logo" translatable="false">Amity_login_logo</string>
    <string name="login" translatable="false">Login</string>
    <string name="Amity_Institute_of_BioTechnology" translatable="false">Amity Institute of BioTechnology</string>
    <string-array name="ASET_CSE">
        <item>Biotechnology Management (NCBA 101)</item>
        <item>Conservation Biology (NCBB 101)</item>
        <item>Disaster Management (NCBC 101)</item>
        <item>Environmental Law (NCBD 101)</item>
        <item>Environmental Management (NCBE 101)</item>
        <item>Industrial, Environmental, Health and Safety (NCBF 101)</item>
        <item>Management Mantra (NCBA 100)</item>
        <item>Managing Human Resource (NCBB 100)</item>
        <item>Marketers Tool-kit (NCBC 100)</item>
        <item>Wealth Management (NCBD 100)</item>
        <item>Cloud Computing (NCBA 102)</item>
        <item>Data Analytics (NCBB 102)</item>
        <item>Network Security (NCBC 102)</item>
        <item>Web Technology (NCBD 102)</item>
        <item>It Skiils for Professionals (NCBQ 102)</item>
        <item>Consumer Electronics (NCBF 102)</item>
        <item>Embedded Systems (NCBG 102)</item>
        <item>Instrumentation Engineering (NCBH 102)</item>
        <item>Signal Processing (NCBI 102)</item>
        <item>Wireless Communication (NCBJ 102)</item>
        <item>Mechanical Engineering (NCBK 102)</item>
        <item>Renewable Energy (NCBL 102)</item>
        <item>Robotics</item>
        <item>Chemicals in Daily Life: Nutritaion and Adultration</item>
        <item>Animation (NCBA 103)</item>
        <item>Audio-Visual Communocation (NCBB 103)</item>
        <item>Media Management (NCBC 103)</item>
        <item>Print media (NCBD 103)</item>
        <item>Fashion Management (NCBA 104)</item>
        <item>Human Rights (NCBA 110)</item>
        <item>Intellectual Property Rights (NCBB 110)</item>
        <item>Psychology (NCBA 111)</item>
        <item>English Litrature (NCBA 117)</item>
        <item>Gandhian Studies (NCBA 118)</item>
    </string-array>
    <string name="Amity_Business_School" translatable="false">Amity Business School</string>
    <string-array name="ASET_ECE">
        <item>Select Course</item>
        <item>Biotechnology Management (NCBA 101)</item>
        <item>Conservation Biology (NCBB 101)</item>
        <item>Disaster Management (NCBC 101)</item>
        <item>Environmental Law (NCBD 101)</item>
        <item>Environmental Management (NCBE 101)</item>
        <item>Industrial, Environmental, Health and Safety (NCBF 101)</item>
        <item>Management Mantra (NCBA 100)</item>
        <item>Managing Human Resource (NCBB 100)</item>
        <item>Marketers Tool-kit (NCBC 100)</item>
        <item>Wealth Management (NCBD 100)</item>
        <item>Cloud Computing (NCBA 102)</item>
        <item>Data Analytics (NCBB 102)</item>
        <item>Network Security (NCBC 102)</item>
        <item>Web Technology (NCBD 102)</item>
        <item>It Skiils for Professionals (NCBQ 102)</item>
        <item>Mechanical Engineering (NCBK 102)</item>
        <item>Renewable Energy (NCBL 102)</item>
        <item>Robotics</item>
        <item>Chemicals in Daily Life: Nutritaion and Adultration</item>
        <item>Animation (NCBA 103)</item>
        <item>Audio-Visual Communocation (NCBB 103)</item>
        <item>Media Management (NCBC 103)</item>
        <item>Print media (NCBD 103)</item>
        <item>Fashion Management (NCBA 104)</item>
        <item>Human Rights (NCBA 110)</item>
        <item>Intellectual Property Rights (NCBB 110)</item>
        <item>Psychology (NCBA 111)</item>
        <item>English Litrature (NCBA 117)</item>
        <item>Gandhian Studies (NCBA 118)</item>
    </string-array>
    <string-array name="ASET_Mech">
        <item>Select Course</item>
        <item>Biotechnology Management (NCBA 101)</item>
        <item>Conservation Biology (NCBB 101)</item>
        <item>Disaster Management (NCBC 101)</item>
        <item>Environmental Law (NCBD 101)</item>
        <item>Environmental Management (NCBE 101)</item>
        <item>Industrial, Environmental, Health and Safety (NCBF 101)</item>
        <item>Management Mantra (NCBA 100)</item>
        <item>Managing Human Resource (NCBB 100)</item>
        <item>Marketers Tool-kit (NCBC 100)</item>
        <item>Wealth Management (NCBD 100)</item>
        <item>Cloud Computing (NCBA 102)</item>
        <item>Data Analytics (NCBB 102)</item>
        <item>Network Security (NCBC 102)</item>
        <item>Web Technology (NCBD 102)</item>
        <item>It Skiils for Professionals (NCBQ 102)</item>
        <item>Consumer Electronics (NCBF 102)</item>
        <item>Embedded Systems (NCBG 102)</item>
        <item>Instrumentation Engineering (NCBH 102)</item>
        <item>Signal Processing (NCBI 102)</item>
        <item>Wireless Communication (NCBJ 102)</item>
        <item>Chemicals in Daily Life: Nutritaion and Adultration</item>
        <item>Animation (NCBA 103)</item>
        <item>Audio-Visual Communocation (NCBB 103)</item>
        <item>Media Management (NCBC 103)</item>
        <item>Print media (NCBD 103)</item>
        <item>Fashion Management (NCBA 104)</item>
        <item>Human Rights (NCBA 110)</item>
        <item>Intellectual Property Rights (NCBB 110)</item>
        <item>Psychology (NCBA 111)</item>
        <item>English Litrature (NCBA 117)</item>
        <item>Gandhian Studies (NCBA 118)</item>
    </string-array>
    <string name="ASET_Civil" translatable="false">ASET(Civil)</string>
    <string-array name="ASET_Chemistry">
        <item>Select Course</item>
        <item>Biotechnology Management (NCBA 101)</item>
        <item>Conservation Biology (NCBB 101)</item>
        <item>Disaster Management (NCBC 101)</item>
        <item>Environmental Law (NCBD 101)</item>
        <item>Environmental Management (NCBE 101)</item>
        <item>Industrial, Environmental, Health and Safety (NCBF 101)</item>
        <item>Management Mantra (NCBA 100)</item>
        <item>Managing Human Resource (NCBB 100)</item>
        <item>Marketers Tool-kit (NCBC 100)</item>
        <item>Wealth Management (NCBD 100)</item>
        <item>Cloud Computing (NCBA 102)</item>
        <item>Data Analytics (NCBB 102)</item>
        <item>Network Security (NCBC 102)</item>
        <item>Web Technology (NCBD 102)</item>
        <item>It Skiils for Professionals (NCBQ 102)</item>
        <item>Consumer Electronics (NCBF 102)</item>
        <item>Embedded Systems (NCBG 102)</item>
        <item>Instrumentation Engineering (NCBH 102)</item>
        <item>Signal Processing (NCBI 102)</item>
        <item>Wireless Communication (NCBJ 102)</item>
        <item>Mechanical Engineering (NCBK 102)</item>
        <item>Renewable Energy (NCBL 102)</item>
        <item>Robotics</item>
        <item>Animation (NCBA 103)</item>
        <item>Audio-Visual Communocation (NCBB 103)</item>
        <item>Media Management (NCBC 103)</item>
        <item>Print media (NCBD 103)</item>
        <item>Fashion Management (NCBA 104)</item>
        <item>Human Rights (NCBA 110)</item>
        <item>Intellectual Property Rights (NCBB 110)</item>
        <item>Psychology (NCBA 111)</item>
        <item>English Litrature (NCBA 117)</item>
        <item>Gandhian Studies (NCBA 118)</item>
    </string-array>
    <string name="Communication" translatable="false">Amity School of Communication</string>
    <string name="Fashion" translatable="false">Amity School of Fashion Design and Technology</string>
    <string name="Law" translatable="false">Amity Law School</string>
    <string name="Language" translatable="false">Amity School of Languages</string>
    <string name="Bhehavioural" translatable="false">Amity School of Behavioral Sciences and Allies Sciences</string>
    <string name="Social_Science" translatable="false">Amity School of Social Science</string>
    <string name="enter_email_id_hint" translatable="false">Email</string>
    <string name="enter_your_password_hint" translatable="false">Password</string>
    <string name="login_btn" translatable="false">Login</string>
    <string name="please_contact_your_department_for_your_credentials_" translatable="false">Please Contact Your Department For Your Credentials</string>
    <string-array name="Departments">
        <item>Select  Your Department</item>
        <item>Amity Business School</item>
        <item>Amity Institute of BioTechnology</item>
        <item>ASET(Mech.)</item>
        <item>ASET(Civil)</item>
        <item>ASET(Chemistry)</item>
        <item>Amity School of Communication</item>
        <item>Amity School of Fashion Design and Technology</item>
        <item>Amity Law School</item>
        <item>Amity School of Behavioral Sciences and Allies Sciences</item>
        <item>Amity School of Languages</item>
        <item>Amity School of Social Science</item>
    </string-array>
    <string-array name="CBCS_Amity_Business_School">
        <item>Select Course</item>
        <item>Biotechnology Management (NCBA 101)</item>
        <item>Conservation Biology (NCBB 101)</item>
        <item>Disaster Management (NCBC 101)</item>
        <item>Environmental Law (NCBD 101)</item>
        <item>Environmental Management (NCBE 101)</item>
        <item>Industrial, Environmental, Health and Safety (NCBF 101)</item>
        <item>Cloud Computing (NCBA 102)</item>
        <item>Data Analytics (NCBB 102)</item>
        <item>Network Security (NCBC 102)</item>
        <item>Web Technology (NCBD 102)</item>
        <item>It Skiils for Professionals (NCBQ 102)</item>
        <item>Consumer Electronics (NCBF 102)</item>
        <item>Embedded Systems (NCBG 102)</item>
        <item>Instrumentation Engineering (NCBH 102)</item>
        <item>Signal Processing (NCBI 102)</item>
        <item>Wireless Communication (NCBJ 102)</item>
        <item>Mechanical Engineering (NCBK 102)</item>
        <item>Renewable Energy (NCBL 102)</item>
        <item>Robotics</item>
        <item>Chemicals in Daily Life: Nutritaion and Adultration</item>
        <item>Animation (NCBA 103)</item>
        <item>Audio-Visual Communocation (NCBB 103)</item>
        <item>Media Management (NCBC 103)</item>
        <item>Print media (NCBD 103)</item>
        <item>Fashion Management (NCBA 104)</item>
        <item>Human Rights (NCBA 110)</item>
        <item>Intellectual Property Rights (NCBB 110)</item>
        <item>Psychology (NCBA 111)</item>
        <item>English Litrature (NCBA 117)</item>
        <item>Gandhian Studies (NCBA 118)</item>
    </string-array>
    <string name="welcome_text">Welcome !</string>
    <string name="signup">Signup</string>
</resources>