<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".SelecourseActivity">

    <ImageButton
        android:id="@+id/image_btn"
        android:layout_width="379dp"
        android:layout_height="135dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/amity_logo"
        app:layout_constraintBottom_toTopOf="@+id/txt_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/amity_logo" />

    <EditText
        android:id="@+id/txt_name"
        android:layout_width="384dp"
        android:autofillHints="name"
        android:layout_height="53dp"
        android:background="@color/bg"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:padding="10dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265" />

    <EditText
        android:id="@+id/txt_enroll"
        android:layout_width="384dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:background="@color/bg"
        android:hint="@string/your_enrollment_number"
        android:layout_marginStart="12dp"
        android:maxLength="12"
        android:padding="10dp"
        android:layout_marginEnd="12dp"
        android:inputType="textShortMessage"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    <Spinner
        android:id="@+id/txt_dept"
        android:layout_width="384dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_enroll" />



    <Spinner
        android:id="@+id/txt_cbcs"
        android:layout_width="384dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_enroll" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="348dp"
        android:layout_height="51dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cbcs"
        app:layout_constraintVertical_bias="0.105" />



</androidx.constraintlayout.widget.ConstraintLayout>